style.css
@import url('https://fonts.googleapis.com/css?family=Raleway');
@import url('https://fonts.googleapis.com/css?family=Oswald');
html,
body {
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
}
html {
    /* Needed to fix footer at bottom of browser */
    position: relative;
    min-height: 100%;
}
#content:target:before {
    content: "";
    display: block;
    height: 90px;
    /* fixed header height*/
    margin: -90px 0 0;
    /* negative fixed header height */
}
body {
    /* Move down content because of fixed navbar at top */
    padding-top: 50px;
    /* Set margin bottom allow for footer height */
    margin-bottom: 50px;
    background: #bbb;
}
img#landing {
    height: 100vh;
    background-size: cover;
    margin-bottom: 50px;
    margin-top: -50px;
    z-index: -1;
}
header {
    background-image: url(photos/landing-hdr-blur.jpg);
    height: 100vh;
    background-size: cover;
    margin-bottom: 50px;
    margin-top: -50px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
header h1 {
    font-size: 4em;
    color: #c2b280;
    text-shadow: 0px 0px 15px rgba(0, 0, 0, 1), 0px 0px 15px rgba(0, 0, 0, 1)
}
#git-logo {
    float: right;
    top: 0px;
    padding: 4px;
    color: #9d9d9d;
}
#git-logo:hover {
    color: #c2b280;
    font-size: 310%;
    transition: color .2s, font-size .1s;
    transition-timing-function: ease-in-out
}
.navbar-brand {
    padding-left: 20px;
    font-size: 25px;
}
.navbar-inverse .navbar-brand:hover,
.navbar-inverse .navbar-brand:focus {
    color: #c2b280;
    font-size: 26px;
    background: transparent;
    transition: color .2s, font-size .1s;
    transition-timing-function: linear;
}

/*
.jumbotron {
    margin-top: 15px;
    padding-bottom: 25px;
    color: black;
    text-align: center;
    background: url("") no-repeat;
    background-clip: border-box;
    background-size: cover;
}
.jumbotron small {
    color: #1F5829;
}
.jumbotron p {
    font-size: 1.3em;
    font-weight: bold;
}

*/

.carousel {
    margin-bottom: 20px;
}
.carousel-indicators .active {
    background-color: #c2b280;
    border: 1px solid #c2b280;
    box-shadow: 0px 0px 10px #000;
}
.carousel-indicators li {
    background-color: rgba(194, 178, 128, .4);
    box-shadow: 0px 0px 10px #000;
    border: none;
}
.carousel-control {
    color: rgb(194, 178, 128);
}
.glyphicon-chevron-left,
.glyphicon-chevron-right {
    text-shadow: 0px 0px 15px rgba(0, 0, 0, 1), 0px 0px 15px rgba(0, 0, 0, 1)
}
.carousel-control:focus,
.carousel-control:hover {
    color: #c2b280;
}
.dark {
    float: left;
    color: #c2b280;
    text-shadow: -1px 0 1px black, 0 2px 1px black, 2px 0 1px black, 0 -2px 1px black;
    font-weight: bold;
    text-align: left;
}
.footer {
    text-align: center;
    color: #c2b280;
    background-color: #101010;
    width: 100%;
}

/* ID'S*/

#mywork {
    padding-top: 60px;
    margin-top: -60px;
}

/*

Color Used - Sand   color: #c2b280;

/*

